# 10-K-Intelligence

./: .env.example  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/AAPL/2023/: financials.json  sections.json
docs/: architecture.md
eval/: __init__.py  dataset.jsonl  run_eval.py
src/tenk/: __init__.py  cli.py  config.py  embeddings.py  llm.py  models.py  pipeline.py  trace.py
src/tenk/api/: main.py
src/tenk/generate/: __init__.py  answer.py
src/tenk/graph/: __init__.py  build_graph.py  extract.py  financials.py  schema.py
src/tenk/index/: __init__.py  build_index.py  vector_store.py
src/tenk/ingest/: __init__.py  chunk.py  edgar.py  parse.py
src/tenk/retrieve/: __init__.py  corrective.py  graph_retriever.py  router.py  vector_retriever.py
src/tenk/ui/: app.py
tests/: test_smoke.py
